--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,8 @@
                         id="id_fb_logo"
                         src="../public/facebook_logo.svg"
                         alt=""
-                        class="w-[320px] mdlg:-mt-24"
+                        class="w-[320px] mdlg:-mt-24 hover:cursor-pointer"
+                        title="click to toggle dark white theme"
                     />
                 </div>
                 <!-- facebook Logo end -->
@@ -30,6 +31,7 @@
                 <!-- message below logo start -->
                 <p
                     class="font-medium text-2xl -mt-1 mdlg:ml-8 mdlg:font-normal mdlg:text-[28px] text-[#1C1E21] dark:text-[#dadada]"
+                    id="id_below_fb_logo"
                 >
                     Connect with friends and the world
                     <span class="block text-center leading-6 mdlg:text-start">
@@ -43,16 +45,19 @@
             <div class="mdlg:flex mdlg:-ml-16 flex-col mdlg:mr-14">
                 <div
                     class="flex flex-col items-center bg-white w-[396px] rounded-md shadow-lg mt-10 dark:bg-gray-700"
+                    id="id_input_buttons_start"
                 >
                     <input
                         class="focus:border-[#1b74e4] focus:outline-none focus:shadow-sm focus:ring-1 focus:ring-[#1b75e43a] placeholder:text-zinc-400 placeholder:text-[17px] w-[363px] h-[51px] border mt-4 rounded-md p-4 bg-white focus:caret-[#1b74e4] dark:bg-slate-700"
                         type="text"
                         placeholder="Email or phone number"
+                        id="id_input_buttons"
                     />
                     <input
                         class="focus:border-[#1b74e4] focus:outline-none focus:shadow-sm focus:ring-1 focus:ring-[#1b75e43a] placeholder:text-zinc-400 placeholder:text-[17px] w-[363px] p-4 h-[51px] border mt-[13px] rounded-md bg-white focus:caret-[#1b74e4] dark:bg-slate-700"
                         type="text"
                         placeholder="Password"
+                        id="id_input_buttons_2"
                     />
 
                     <button
@@ -63,6 +68,7 @@
 
                     <p
                         class="text-[#1877f2] hover:cursor-pointer hover:underline my-4 text-sm dark:text-[#59a1ff]"
+                        id="id_p"
                     >
                         Forget password?
                     </p>
@@ -77,9 +83,10 @@
                         Create new Account
                     </button>
                 </div>
-                <p class="mt-7 text-sm text-center dark:text-white">
+                <p class="mt-7 text-sm text-center dark:text-white" id="id_p2">
                     <span
                         class="font-bold text-zinc-800 hover:underline dark:text-white"
+                        id="id_span"
                         >Create a Page</span
                     >
                     for a celebrity, brand or business.
@@ -87,5 +94,6 @@
                 <!-- input and buttons end -->
             </div>
         </div>
+        <script src="./index.js"></script>
     </body>
 </html>
