applied stash changes

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,6 +7,7 @@
         <link rel="icon" href="../public/facebook favicon.webp" />
         <title>Facebook - log in or sign up</title>
     </head>
+    <!-- changed being on 11-8-dark-mode branch -->
 
     <body
         class="font-Roboto bg-[#f0f2f5] h-screen min-w-fit dark:bg-slate-800"
